Increase text size in tags

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,7 @@ hr {
     grid-row-start: 3;
     grid-column-start: 2;
     height: 100%;
+    font-size: 16px;
   }
   .two-column {
     display: grid;
@@ -218,6 +219,7 @@ hr {
   .two-column .card .tags {
     position: absolute;
     bottom: 2.5vh;
+    font-size: 16px;
   }
 }
 a {
