--- a/styles.scss
+++ b/styles.scss
@@ -262,6 +262,7 @@ hr {
             grid-row-start: 3;
             grid-column-start: 2;
             height: 100%; 
+            font-size: 16px;
         }
     }
 
@@ -292,6 +293,7 @@ hr {
             .tags {
                 position: absolute;
                 bottom: 2.5vh;
+                font-size: 16px;
             }
         }
     }
