--- a/styles.scss
+++ b/styles.scss
@@ -154,6 +154,7 @@ hr {
 
     .tag {
         font-weight: 400;
+        font-size: 16px;
         border-radius: 3px;
         vertical-align: text-top;
         display: inline-block;
@@ -227,7 +228,7 @@ hr {
             grid-template-rows: 1fr 1fr 1fr;
             grid-template-columns: 1fr 6fr;
             padding: 1.25%;
-            padding-bottom: 2.75%;
+            padding-bottom: 3%;
             margin-top: 0;
         }
 
