--- a/styles.scss
+++ b/styles.scss
@@ -11,8 +11,8 @@ $blue: #68b0f1;
 $green: #5fc383;
 
 // Dark theme
-$light-black: #11131f;
-$dark-black: #202020;
+$light-black: #1D2029;
+$dark-black: #252b43;
 $smoke: #A9A9A9;
 $dark-red: #a01300;
 $light-blue: #00ebeb;
