--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@ $tablet-breakpoint: 1000px;
 
 // Light theme
 $white: #fff;
-$off-white: #f0f3f7;
+$off-white: #F6F8FA;
 $dark-grey: #606060;
 $light-grey: #CDCDCD;
 $pink: #ea86ae;
