--- a/styles.scss
+++ b/styles.scss
@@ -111,8 +111,16 @@ hr {
 
     .about-me {
         font-size: 14px;
-        margin-left: auto;
-        margin-right: auto;
+
+
+        a {
+            color: #007bff;
+            border: none;
+        }
+
+        a:hover {
+            border-bottom: solid 1px;
+        }
     }
 }
 
