Change link styling

--- a/styles.css
+++ b/styles.css
@@ -237,18 +237,18 @@ hr {
 a {
   color: black;
   text-decoration: none;
-  border-bottom: dotted 1.5px;
+  border-bottom: dashed 1px;
 }
 a:hover {
   text-decoration: none;
-  border-bottom: solid 1.5px;
+  border-bottom: solid 1px;
 }
 a.dark {
   color: white;
 }
 p a {
   color: black;
-  border-bottom: dotted 1.5px;
+  border-bottom: dashed 1px;
 }
 p a.dark {
   color: white;
