--- a/styles.scss
+++ b/styles.scss
@@ -57,6 +57,7 @@ ul {
 hr {
     border: 0;
     height: 0;
+    margin: 0;
 }
 // End tag styling
 
@@ -310,6 +311,10 @@ hr {
                 font-size: 16px;
             }
         }
+    }
+
+    hr {
+        height: 5px;
     }
 }
 // End custom element styling
