Increase margin for about me section

--- a/styles.scss
+++ b/styles.scss
@@ -110,6 +110,7 @@ hr {
     .about-me {
         font-size: 14px;
         margin: 0;
+        margin-top: 5px;
 
         a {
             color: #007bff;
