Add shadows back to cards

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ hr {
   padding: 3%;
   font-size: 14px;
   border-radius: 3px;
-  border: 1px solid #cdcdcd;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
   border-top: 2px solid #ea86ae;
   transition: transform 0.2s;
   position: relative;
