--- a/styles.scss
+++ b/styles.scss
@@ -41,6 +41,17 @@ footer {
     vertical-align: middle;
     line-height: 25px;
     font-size: 12px;
+
+    p {
+        a {
+            color: #007bff;
+            border: none;
+        }
+    
+        a:hover {
+            border-bottom: solid 1px;
+        }
+    }
 }
 
 img {
