--- a/styles.css
+++ b/styles.css
@@ -306,6 +306,10 @@ p a.dark {
   color: white;
 }
 
+h1 {
+  font-family: Lato, arial, verdana, helvetica, sans-serif;
+}
+
 h1, h2, h3, h4 {
   margin: auto;
   font-weight: 150;
