--- a/styles.scss
+++ b/styles.scss
@@ -31,7 +31,6 @@ body.dark {
 }
 
 header {
-    font-family: Lato, arial, verdana, helvetica, sans-serif;
     text-align: center;
 }
 
@@ -364,6 +363,10 @@ p {
     a.dark {
         color: white;
     }
+}
+
+h1 {
+    font-family: Lato, arial, verdana, helvetica, sans-serif;
 }
 
 h1, h2, h3, h4 {
