Change font of section headings

--- a/styles.scss
+++ b/styles.scss
@@ -144,7 +144,8 @@ hr {
 }
 
 .section-heading {
-    margin-top: 2vh;
+    font-family: Lato, arial, verdana, helvetica, sans-serif;
+    margin-top: 3vh;
 }
 
 .card {
