--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   background-color: #F6F8FA;
   color: black;
   transition-property: background;
-  transition: background 500ms ease-in-out;
+  transition: background 250ms ease-in-out;
 }
 
 body.dark {
@@ -82,6 +82,8 @@ hr {
 
 .profile .links-container .link-container img {
   height: 20px;
+  transition-property: filter;
+  transition: 250ms ease-in-out;
 }
 
 @media (max-width: 400px) {
@@ -124,8 +126,8 @@ hr {
   border-top: 2px solid #ea86ae;
   transition: transform .2s;
   position: relative;
-  transition-property: background;
-  transition: background 500ms ease-in-out;
+  transition-property: background, border-top;
+  transition: background 250ms ease-in-out, border-top 250ms ease-in-out;
 }
 
 .card .image {
@@ -161,6 +163,8 @@ hr {
   background-color: #ea86ae;
   color: #fff;
   cursor: pointer;
+  transition-property: background;
+  transition: background 250ms ease-in-out;
 }
 
 .card .tag a {
@@ -289,6 +293,11 @@ hr {
   hr {
     height: 5px;
   }
+}
+
+a, p, h1, h2, h3, h4, h5, h6, li {
+  transition-property: color;
+  transition: 250ms ease-in-out;
 }
 
 a {
