--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ hr {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 5fr;
     padding: 1.25%;
-    padding-bottom: 3%;
+    padding-bottom: 2rem;
     margin-top: 0;
   }
   .single-column .image-container {
@@ -273,7 +273,7 @@ hr {
   .two-column .card {
     align-items: center;
     height: auto;
-    padding-bottom: 6vh;
+    padding-bottom: 3rem;
     grid-row: auto;
     margin-top: 0.25vh;
     position: relative;
@@ -287,7 +287,6 @@ hr {
   }
   .two-column .card .tags {
     position: absolute;
-    bottom: 2.5vh;
     font-size: 16px;
   }
   hr {
