Add extra margin to links bar

--- a/styles.scss
+++ b/styles.scss
@@ -96,6 +96,8 @@ hr {
         display: flex;
         justify-content: space-evenly;
         flex-wrap: wrap;
+        margin-top: 0.33rem;
+        margin-bottom: 0.33rem;
 
         .link-container {
             display: flex;
