--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,7 @@ hr {
   padding: 3%;
   font-size: 14px;
   border-radius: 3px;
-  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
-  border-top: 2px solid #ea86ae;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   transition: transform .2s;
   position: relative;
   transition-property: background, border-top;
@@ -182,7 +181,6 @@ hr {
 }
 
 .card.dark {
-  border-top: 2px solid red;
   background-color: #242424;
   color: white;
   border-left: none;
