--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ hr {
 .card {
   background-color: #fff;
   margin-top: 0.5rem;
-  padding: 3%;
+  padding: 1rem;
   font-size: 14px;
   border-radius: 3px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -223,7 +223,7 @@ hr {
     height: 210px;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 5fr;
-    padding: 1.25%;
+    padding: 1%;
     padding-bottom: 2rem;
     margin-top: 0;
   }
