Make container more responsive

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,34 @@ hr {
   margin: 0;
 }
 
+.container {
+  margin: auto;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
 .dark-theme-button.dark img {
   filter: invert(1);
 }
