--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ hr {
 
 .profile .about-me {
   margin: 0;
-  margin-top: 5px;
+  margin-top: 1.5rem;
 }
 
 .profile .about-me a {
@@ -166,6 +166,7 @@ hr {
 }
 
 .card .demo-link {
+  transition: border 250ms ease-in-out;
   font-size: 18px;
   font-weight: 600;
   color: #5fc383;
