--- a/styles.scss
+++ b/styles.scss
@@ -145,9 +145,21 @@ hr {
     }
 
     // Two rows for links when horizontal size of screen is too small.
-    @media (max-width: 400px) {
-        #dark-theme-button {
-            display: none;
+    @media (min-width: $tablet-breakpoint) {
+        padding-top: 1rem;
+
+        .top-bar {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+
+            h1 {
+                margin-left: 0;
+                font-size: 30px;
+            }
+
+            h2 {
+                display: none;
+            }
         }
     }
 
@@ -155,13 +167,8 @@ hr {
         margin: 0;
         margin-top: 1.5rem;
 
-        a {
-            color: #007bff;
-            border: none;
-        }
-
-        a:hover {
-            border-bottom: solid 1px;
+        p {
+            font-size: 24px;
         }
     }
 }
