--- a/styles.css
+++ b/styles.css
@@ -15,24 +15,6 @@ header {
   text-align: center;
 }
 
-footer {
-  margin-top: 2vh;
-  height: 50px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 50px;
-  font-size: 12px;
-}
-
-footer p a {
-  color: #007bff;
-  border: none;
-}
-
-footer p a:hover {
-  border-bottom: solid 1px;
-}
-
 img {
   max-width: 100%;
   max-height: 100%;
@@ -48,6 +30,47 @@ hr {
   border: 0;
   height: 0;
   margin: 0;
+}
+
+footer {
+  display: grid;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+
+@media (max-width: 960px) {
+  footer p {
+    text-align: center;
+  }
+  footer .footer-links {
+    margin-top: 0.5rem;
+  }
+}
+
+@media (min-width: 960px) {
+  footer {
+    grid-template-columns: 4fr 2fr;
+  }
+}
+
+footer p a {
+  border-bottom: none;
+  color: #007bff;
+}
+
+footer p a:hover {
+  border-bottom: solid 1px;
+}
+
+footer .footer-links {
+  float: right;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer .footer-links .link-container a {
+  border-bottom: none;
+  line-height: unset;
 }
 
 .container {
