--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ footer .footer-links .link-container a {
   font-size: 24px;
 }
 
-.profile.dark .links-container .link-container img {
+.social-icon.dark {
   filter: invert(100);
 }
 
