--- a/styles.scss
+++ b/styles.scss
@@ -165,6 +165,10 @@ footer {
                 transition-property: filter;
                 transition: 250ms ease-in-out;
             }
+
+            a {
+                border-bottom: dashed 1px;
+            }
         }
     }
 
@@ -190,7 +194,6 @@ footer {
     .about-me {
         margin: 0;
         margin-top: 1.5rem;
-
         p {
             font-size: 24px;
         }
@@ -230,12 +233,14 @@ footer {
         font-size: 18px;
         font-weight: 600;
         color: $green;
+        border-bottom: dashed 1px;
     }
 
     .repo-link {
         font-size: 18px;
         font-weight: 600;
         color: $blue;
+        border-bottom: dashed 1px;
     }
 
     .demo-link + .repo-link {
@@ -413,7 +418,6 @@ a, p, h1, h2, h3, h4, h5, h6, li {
 a {
     color: black;
     text-decoration: none; 
-    border-bottom: dashed 1px;
 }
 
 a:hover {
