Fix inconsistent margins

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -33,7 +33,7 @@
             height: 100%;
             max-height: 60%;
             margin: auto;
-            margin-top: 2vh;
+            margin-top: 1rem;
         }
 
         .description {
@@ -80,7 +80,7 @@
             .image {
                 display: block;
                 margin: auto;
-                margin-top: 2vh;
+                margin-top: 1rem;
                 max-width: 100%;
                 max-height: 325px;
             }
