--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -13,7 +13,7 @@
     .image {
         display: block;
         margin: auto;
-        margin-top: 1vh;
+        margin-top: 1rem;
         max-height: 50vw;
     }
 
@@ -91,4 +91,3 @@
         color: $light-green;
     }
 }
-
